# multi-sol

./: README.md
anchor-backend/: Anchor.toml
anchor-backend/programs/anchor-counter/: Cargo.toml
anchor-backend/programs/anchor-counter/src/: lib.rs
anchor-backend/programs/solanamultisig/: Cargo.toml
anchor-backend/programs/solanamultisig/src/: lib.rs
anchor-backend/tests/: anchor-counter.ts  intiialize.js
front-end/: package.json
front-end/components/: Icons.tsx  Increment.tsx  Initialize.tsx  Instructions.tsx  Three.tsx  snowflakes.js
front-end/components/idl/: solsticio_space.json
front-end/pages/: index.tsx
front-end/styles/: Three.module.css
